fixing bugs of upgrading